--- a/README
+++ b/README
@@ -22,7 +22,7 @@ This code was written by Christopher Henry, Renata Ivanek, Michelle Wemette, and
 Ece Bulut. Additional work on writing and reviewing documentation, catching
 erroneous output, making suggestions, etc. was done by Sarah I. Murphy,
 Sebastian Llanos-Soto, Claire Zoellner, and Diane Wetherington. Additional
-thanks is due to iFood Decision Systems (iFoodDS), who developed a web
+thanks is due to iFoodDecisionSciences (iFoodDS), who developed a web
 interface for this model, and who have helped with background information,
 debugging, suggestions and requests for output features, etc.
 
